k8s/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapp-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: weatherapp-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weatherapp-ui
    spec:
      containers:
        - name: weatherapp-ui
          image: "afakharany/weatherapp-ui:lab"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:  
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
