k8s/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-ui
spec:
  selector:
    app.kubernetes.io/name: weatherapp-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
